tests/ui/higher-ranked/trait-bounds/issue-59311.stderr
error: higher-ranked lifetime error
  --> $DIR/issue-59311.rs:17:5
   |
LL |     v.t(|| {});
   |     ^^^^^^^^^^
   |
   = note: could not prove `{closure@$DIR/issue-59311.rs:17:9: 17:11} well-formed`

error: higher-ranked lifetime error
  --> $DIR/issue-59311.rs:17:5
   |
LL |     v.t(|| {});
   |     ^^^^^^^^^^
   |
   = note: could not prove `{closure@$DIR/issue-59311.rs:17:9: 17:11} well-formed`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: higher-ranked lifetime error
  --> $DIR/issue-59311.rs:17:9
   |
LL |     v.t(|| {});
   |         ^^^^^
   |
   = note: could not prove `for<'a> &'a V: 'b`

error: aborting due to 3 previous errors

